--- a/particles/particles2.html
+++ b/particles/particles2.html
@@ -2,8 +2,9 @@
 
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+<script type="text/javascript" src="glh.js"></script>
 <script type="text/javascript" src="particle.js"></script>
-
+<script type="text/javascript" src="utils.js"></script>
 
 <script id="particle-shader-fs" type="fs">
 
@@ -43,42 +44,6 @@
 
 <script type="text/javascript">
 
-function createShader(gl, id) {
-	var shaderScript = document.getElementById(id);
-    if (!shaderScript) {
-        return (null);
-    }
-
-    var src = shaderScript.firstChild.nodeValue;
-    var shader;
-    if (shaderScript.type == "fs") {
-        shader = gl.createShader(gl.FRAGMENT_SHADER);
-    } else if (shaderScript.type == "vs") {
-        shader = gl.createShader(gl.VERTEX_SHADER);
-    } else if (shaderScript.type == "gs") {
-        shader = gl.createShader(gl.GEOMETRY_SHADER);
-    } else {
-    	alert("not a valid shader type");
-    }
-
-    gl.shaderSource(shader, src);
-    gl.compileShader(shader);
-
-    if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-        alert(gl.getShaderInfoLog(shader));
-        return (null);
-    }
-
-    return (shader);
-}
-
-function glCheckError(gl, prefix) {
-	var err = gl.getError();
-	if (err != gl.NO_ERROR) {
-		alert("GL error occured: " + prefix + " : " + err);
-	}
-}
-
 /** page loaded callback */
 function onPageLoaded() {
 
@@ -92,7 +57,7 @@ function onPageLoaded() {
 
 	requestAnimationFrame(loop);
 
-    glCheckError(gl, "post deinit");
+    glhCheckError(gl, "post deinit");
 }
 
 function initGL() {
@@ -106,8 +71,8 @@ function initGL() {
     gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
 
 	//create rendering program
-    vs = createShader(gl, "particle-shader-vs");
-    fs = createShader(gl, "particle-shader-fs");
+    vs = glhCreateShader(gl, "particle-shader-vs");
+    fs = glhCreateShader(gl, "particle-shader-fs");
 
     program = gl.createProgram();
     gl.attachShader(program, vs);
@@ -179,10 +144,6 @@ function initLoop() {
 	S = getUrlVars()["S"] || 4;
 
 	source = new ParticleSource(N);
-}
-
-function sleep(ms) {
-	return new Promise(resolve => setTimeout(resolve, ms));
 }
 
 async function loop() {
