--- a/html/maquette/index.html
+++ b/html/maquette/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="light">
+<body class="normal">
 	<div class="portal">
 		<img src="./res/logo.png" id="ensiie-logo" class="portal-logo"></img>
 		<div class="portal-info">
