font-awesome icons

--- a/html/maquette/index.html
+++ b/html/maquette/index.html
@@ -30,7 +30,7 @@
 		  </div>
 		  <div class="portal-tab-item" id="pro-tab">
 			<img src="./res/icon_pro/512x512.png"></img>
-			<text><u>Professionel:</u> Contactez nos étudiants ou notre Junion Entreprise: Dièse</text>
+			<text><u>Professionel:</u> Contactez nos étudiants et notre Junior Entreprise: Dièse</text>
 		  </div>
 		</div>
 
