--- a/html/maquette/intra/index.html
+++ b/html/maquette/intra/index.html
@@ -8,6 +8,9 @@
         <!-- ensure proper rendering and touch zooming for all devices -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <!-- font awesome icons -->
+        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+
         <!-- bootstrap -->
         <link rel="stylesheet" type="text/css" href="../bootstrap/dist/css/bootstrap.min.css">
         <script src="../js/jquery.min.js"></script>
@@ -17,78 +20,75 @@
         <!-- css -->
         <link rel="stylesheet" type="text/css" href="../css/iiens.css">
         <link rel="stylesheet" type="text/css" href="./css/navbar.css">
-        <link rel="stylesheet" type="text/css" href="./css/sidebar.css">
         <link rel="stylesheet" type="text/css" href="./css/page.css">
 
 </head>
 
 <body class="light">
 
-
-    <nav class="sidebar">
-        <script>
-            var sections = [];
-            sections.push(["Étudiants", [0, "•", "Accueil", "./index.html"], [0, "•", "Votre compte"], [0, "&#128214;", "Cours / Interros"], [0, "&#128338;", "Emploi du temps"], [0, "•", "Partir à l'étranger", ["http://etranger.iiens.net/"]]]);
-            sections.push(["Associations", [0, "•", "ARISE (nous)", ["http://arise.iiens.net/"]], [1, "•", "Logement", "http://resiie.iiens.net/"]]);
-            sections.push(["Services", [0, "•", "Forum", "https://agora.iiens.net"], [0, "•", "SSH/FTP/IRC"], [0, "•", "Wiki"], [0, "•", "Webmail", "https://webmail.ensiie.fr"], [0, "•", "Pastebin", "https://paste.iiens.net/"], [0, "•", "Git", "https://git.iiens.net"]]);
-            sections.push(["Modération", [1, "•", "Base de données", "https://phpmyadmin.iiens.net"], [1, "•", "Mailing-lists", "https://listes.iiens.net/wws"], [1, "•", "Stats IRC", "https://ircstats.iiens.net/"]]);
-
-            var lockIcon = "&#128274;";
-            var i;
-            for (i = 0 ; i < sections.length ; i++) {
-                document.write("<div class=\"sidebar-section\">");
-
-                    document.write("<div class=\"sidebar-section-title\">" + sections[i][0] + "</div>");
-                    var j;
-                    for (j = 1 ; j < sections[i].length ; j++) {
-                        document.write("<div class=\"sidebar-section-item\">" + (sections[i][j][0] ? lockIcon : sections[i][j][1]) + " " + sections[i][j][2] + "</div>");
-                    }
-
-                document.write("</div>");
-            }
-
-        </script>
-    </nav>
-
-
-    <nav class="nav navbar navbar-expand-sd">
+    <nav class="nav navbar">
         <!--<li class="nav-item">
             <img src="./res/logo.png"></img>
         </li>
         -->
-        <li class="nav-item">
-            <div onclick="toggleSidebar()">&#9776;</div>
-        </li>
+            <span class="navbar-item navbar-text navbar-title" onclick="toggleSidebar()">IIens.net (LOGO)</span> 
+            <div class="navbar-item navbar-text navbar-toggler" onclick="toggleSidebar()">&#9776; Accueil</div>
 
-        <li class="nav-item">
-            <span class="navbar-text" onclick="toggleSidebar()">Accueil</span> 
-        </li>
+            <form class="navbar-item navbar-search-form form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Rechercher...">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">&#128269;</button>
+            </form>
 
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Rechercher...">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">&#128269;</button>
-        </form>
-
-        <li class="nav-item form-inline">
-            <span class="navbar-text mr-sm-4">pereira2017</span> 
-            <!-- <img class = "navbar-text my-2 my-sm-0" src="./res/pereira2017.png"></img> -->
-        </li>
+            <div class="navbar-profile">
+                <span class="navbar-text navbar-item navbar-profile-login">pereira2017</span> 
+                <img class="navbar-item navbar-profile-img" src="./res/pereira2017.png"></img>
+            </div>
     </nav>
-    
+
+
+
     <div class="page">
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
-        AAAAAAAAAAAA
+        <!-- Page sidebar -->
+        <nav class="page-sidebar">
+            <script>
+                var sections = [];
+                sections.push(["Étudiants", [0, "fa fa-home", "Accueil", "./index.html"], [0, "fa fa-user", "Votre compte", "#"], [0, "fa fa-book", "Cours / Interros"], [0, "fa fa-calendar", "Emploi du temps", "#"], [0, "fa fa-plane", "Partir à l'étranger", "http://etranger.iiens.net/"]]);
+                sections.push(["Associations", [0, "fa fa-users", "Bureau des élèves", "http://bde.iiens.net/"], [0, "fa fa-futbol-o", "Bureau des sports", "#"], [0, "fa fa-truck", "ARISE (nous)", "http://arise.iiens.net/"], [0, "fa fa-calendar-o", "Événements", "#"], [0, "•", "Loisirs", "#"], [0, "•", "Culture et créativité", "#"], [1, "•", "Logement", "http://resiie.iiens.net/"]]);
+                sections.push(["Services", [0, "fa fa-commenting", "Forum", "https://agora.iiens.net"], [0, "fa fa-terminal", "SSH/FTP/IRC", "#"], [0, "fa fa-wikipedia-w", "Wiki", "#"], [0, "fa fa-envelope-o", "Webmail", "https://webmail.ensiie.fr"], [0, "fa fa-clipboard", "Pastebin", "https://paste.iiens.net/"], [0, "fa fa-gitlab", "Git", "https://git.iiens.net"], [0, "fa fa-bed", "Estudines", "https://estudines.iiens.net/"]]);
+                sections.push(["Modération", [0, "fa fa-database", "Base de données", "https://phpmyadmin.iiens.net"], [0, "fa fa-envelope", "Mailing-lists", "https://listes.iiens.net/wws"], [0, "fa fa-bar-chart", "Stats IRC", "https://ircstats.iiens.net/"]]);
+
+                var lockIcon = "fa fa-lock";
+                var i;
+                for (i = 0 ; i < sections.length ; i++) {
+                    document.write("<div class=\"page-sidebar-section\">");
+
+                        document.write("<div class=\"page-sidebar-section-title\">" + sections[i][0] + "</div>");
+                        var j;
+                        for (j = 1 ; j < sections[i].length ; j++) {
+                            document.write("<div class=\"page-sidebar-section-item\">" + "<a href=" + sections[i][j][3] + "><i class=\"" + (sections[i][j][0] ? lockIcon : sections[i][j][1]) + "\"></i>" + sections[i][j][2] + "</a></div>");
+
+                        }
+
+                    document.write("</div>");
+                }
+
+            </script>
+        </nav>
+        <!-- Page Content -->
+        <div class="page-content">
+            <!--<script type="text/javascript">var i; for (i = 0 ; i < 1000 ; i++) { document.write("CONTENT GOES HERE "); }</script> -->
+            <div class="page-content-news">
+                <div class="page-content-news-title">
+                    Newsletter du 4 juillet
+                </div>
+                <div class="page-content-news-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </div>
+            </div>
+        </div>
+
     </div>
+
 
 </body>
 
