--- a/html/maquette/intra/index.html
+++ b/html/maquette/intra/index.html
@@ -12,10 +12,10 @@
         <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
 
         <!-- bootstrap -->
-        <link rel="stylesheet" type="text/css" href="../bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
         <script src="../js/jquery.min.js"></script>
         <script src="../js/popper.js"></script>
-        <script src="../bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
 
         <!-- css -->
         <link rel="stylesheet" type="text/css" href="../css/iiens.css">
