--- a/html/maquette/intra/index.html
+++ b/html/maquette/intra/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -31,12 +29,19 @@
             <img src="./res/logo.png"></img>
         </li>
         -->
-            <img class="navbar-item navbar-logo" src="./res/ensiie-logo.png"></img>
 
-            <div class="navbar-item navbar-title">
+            <div class="navbar-item navbar-title" onclick="toggleSidebar()">
                 <i class="navbar-title-icon fa fa-bars"></i>
                 <span class="navbar-text navbar-title-text">Accueil</span>
+
+                <script type="text/javascript">
+                    function toggleSidebar() {
+                    }
+                </script>
+
             </div>
+
+            <img class="navbar-item navbar-item-logo" src="./res/banniere.jpg"></img>
 
             <form class="navbar-item navbar-search-form form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Rechercher...">
@@ -53,7 +58,7 @@
 
     <div class="page">
         <!-- Page sidebar -->
-        <nav class="page-sidebar">
+        <nav class="page-sidebar" id="page-sidebar">
             <script>
                 var sections = [];
                 sections.push(["Étudiants", [0, "fa fa-home", "Accueil", "./index.html"], [0, "fa fa-user", "Votre compte", "#"], [0, "fa fa-book", "Cours / Interros"], [0, "fa fa-calendar", "Emploi du temps", "#"], [0, "fa fa-plane", "Partir à l'étranger", "http://etranger.iiens.net/"]]);
@@ -91,42 +96,46 @@
             <!-- banner with timetable, surveys, todo list -->
             <div class="page-content-item">
                 <div class="page-content-item-banner b">
-                    <div class="page-content-item-banner-item b-r">
-                        <div class="page-content-item-banner-item-title b-b">
-                            NE PAS OUBLIER
-                        </div>
+                    <div class="page-content-item-banner-item">
 
-                        <div class="page-content-item-banner-item-content">
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                        </div>
                     </div>
                     
-                    <div class="page-content-item-banner-item b-r">
-                        <div class="page-content-item-banner-item-title b-b">
-                        MON EMPLOI DU TEMPS
-                        </div>
+                    <div class="page-content-item-banner-item b-l">
 
-                        <div class="page-content-item-banner-item-content">
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                        </div>
                     </div>
 
                     <div class="page-content-item-banner-item">
-                        <div class="page-content-item-banner-item-title b-b">
-                            DERNIER SONDAGE
-                        </div>
+                        <div class="page-content-item-banner-item-survey b-l">
+                            <div class="page-content-item-banner-item-survey-title">
+                                Sondage
+                            </div>
 
-                        <div class="page-content-item-banner-item-content">
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
-                            - S'inscrire en license de math<br>
+                            <div class="page-content-item-banner-item-survey-question">
+                                C'était bien le WEI?
+                            </div>
+
+                            <div class="page-content-item-banner-item-survey-answers">
+                                <div class="page-content-item-banner-item-survey-answer">
+                                    Oui
+                                </div>
+
+                                <div class="page-content-item-banner-item-survey-answer">
+                                    Oui
+                                </div>
+
+                                <div class="page-content-item-banner-item-survey-answer">
+                                    Oui
+                                </div>
+
+                                <div class="page-content-item-banner-item-survey-answer">
+                                    Je ne sais pas je<br>suis trop vieux
+                                </div>
+                            </div>
+
+                            <div class="page-content-item-banner-item-survey-question">
+                                <div>Voir les résultats</div>
+                                <div>Plus de sondages</div>
+                            </div>
                         </div>
                     </div>
 
