--- a/html/index.html
+++ b/html/index.html
@@ -6,16 +6,27 @@
 </head>
 
 <body>
-	BIENVENUE SUR MON SITE FANTASTITESQUE
+	BIENVENUE SUR MON SITE.
 	</br>
-	<br><a href="tipe/">TIPE (rendu graphique et génération procédural de surface terrestre)</a>
+	</br>
+	Hop hop hop... C'est encore un peu vide ici. Voici quelques liens pratiques me concernant
+	</br>
+	<br><a href="pro/cv.pdf">CV</a> (mon dernier CV mis à jour)
+	<br><a href="tipe/">TIPE</a>  (réalisé en CPGE, rendu graphique et génération procédural de surface terrestre)
+	<br><a href="https://github.com/rpereira-dev/" target="_blank">Github</a> (mes dépots de projets open-source)
+	<br><a href="https://www.root-me.org/rpereira42/" target="_blank">Root-me</a> (mon profil sur le site d'apprentissage en sécurité informatique root-me)
+	<br><br><img src="https://projecteuler.net/profile/rpereira42.png" alt="Profile Image Project-Euler" title="Profile Image Project-Euler">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
+	<strong><u>Quelques démo de developpement mis en ligne sur mon site</u></strong>
+	<br><a href="maquette/">Projet de refonte de l'intranet iiens.net</a>
 	<br><a href="particles/colorful.html?N=128&S=6">WebGL demo (particle sources, click)</a>
 	<br><a href="particles/stars.html?N=128&S=6">WebGL demo (random particles)</a>
 	<br><a href="pendulum/">Pendule double (si aucuns paramètres URL, ils sont générés aléatoirement))</a>
 	<br></br>
-	<br><a href="https://github.com/rpereira-dev/" target="_blank">Github</a>
-	<br><a href="https://www.root-me.org/rpereira42/" target="_blank">Root-me</a>
-	<br><br><img src="https://projecteuler.net/profile/rpereira42.png" alt="Profile Image Project-Euler" title="Profile Image Project-Euler">
 </body>
 
 </html>
