--- a/html/index.html
+++ b/html/index.html
@@ -11,22 +11,28 @@
 	</br>
 	Hop hop hop... C'est encore un peu vide ici. Voici quelques liens pratiques me concernant
 	</br>
-	<br><a href="pro/cv.pdf">CV</a> (mon dernier CV mis à jour)
+	</br>
+	<strong><u>Projets personnels</u></strong>
+	<br><a href="https://github.com/rpereira-dev/VoxelEngine/README.md">VoxelEngine</a> Moteur de rendu graphique 3D utilisant des <a href="https://en.wikipedia.org/wiki/Voxel">voxels</a>
 	<br><a href="tipe/">TIPE</a>  (réalisé en CPGE, rendu graphique et génération procédural de surface terrestre)
-	<br><a href="https://github.com/rpereira-dev/" target="_blank">Github</a> (mes dépots de projets open-source)
-	<br><a href="https://www.root-me.org/rpereira42/" target="_blank">Root-me</a> (mon profil sur le site d'apprentissage en sécurité informatique root-me)
+	</br>
+	</br>
+	<strong><u>Quelques démo de webgl / JS en ligne sur mon site</u></strong>
+	<br><a href="maquette/">maquette iiens.net</a> Projet de refonte de l'intranet iiens.net
+	<br><a href="particles/colorful.html?N=128&S=6">WebGL demo 1</a> Sources de particules (clique)
+	<br><a href="particles/stars.html?N=128&S=6">WebGL demo 2</a> Nuit étoilé
+	<br><a href="pendulum/">Pendule double</a> (si aucuns paramètres URL, ils sont générés aléatoirement)
+	<br><a href="fractals/">Fractals explorer</a> (in-dev)
+	</br>
+	</br>
+	<strong><u>Liens utiles</u></strong>
+	<br><a href="pro/cv.pdf">CV</a> mon dernier CV mis à jour
+	<br><a href="https://github.com/rpereira-dev/" target="_blank">Github</a> mes dépots de projets open-source
+	<br><a href="https://www.youtube.com/channel/UCuw8U-RKsTFFbc6O6F8S1Ug">Chaine YouTube</a>
+	<br><a href="https://www.root-me.org/rpereira42/" target="_blank">Root-me</a> mon profil sur le site d'apprentissage en sécurité informatique root-me
 	<br><br><img src="https://projecteuler.net/profile/rpereira42.png" alt="Profile Image Project-Euler" title="Profile Image Project-Euler">
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	<strong><u>Quelques démo de developpement mis en ligne sur mon site</u></strong>
-	<br><a href="maquette/">Projet de refonte de l'intranet iiens.net</a>
-	<br><a href="particles/colorful.html?N=128&S=6">WebGL demo (particle sources, click)</a>
-	<br><a href="particles/stars.html?N=128&S=6">WebGL demo (random particles)</a>
-	<br><a href="pendulum/">Pendule double (si aucuns paramètres URL, ils sont générés aléatoirement))</a>
-	<br></br>
+
+
 </body>
 
 </html>
