--- a/UE/S3/microarchi/bus_ia/db/bus_ia.lpc.html
+++ b/UE/S3/microarchi/bus_ia/db/bus_ia.lpc.html
@@ -16,6 +16,38 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >inst7</TD>
+<TD >26</TD>
+<TD >0</TD>
+<TD >24</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst1</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst4</TD>
 <TD >3</TD>
 <TD >8</TD>
@@ -41,6 +73,22 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst8</TD>
+<TD >48</TD>
+<TD >24</TD>
+<TD >0</TD>
+<TD >24</TD>
+<TD >70</TD>
+<TD >24</TD>
+<TD >24</TD>
+<TD >24</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
