--- a/UE/S3/microarchi/bus_ia/db/bus_ia.lpc.html
+++ b/UE/S3/microarchi/bus_ia/db/bus_ia.lpc.html
@@ -16,6 +16,22 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >inst1</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst7</TD>
 <TD >26</TD>
 <TD >0</TD>
