--- a/UE/S3/microarchi/bus_ia/db/bus_ia.lpc.html
+++ b/UE/S3/microarchi/bus_ia/db/bus_ia.lpc.html
@@ -16,6 +16,38 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >inst13</TD>
+<TD >231</TD>
+<TD >7</TD>
+<TD >6</TD>
+<TD >7</TD>
+<TD >7</TD>
+<TD >7</TD>
+<TD >7</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst11</TD>
+<TD >0</TD>
+<TD >230</TD>
+<TD >0</TD>
+<TD >230</TD>
+<TD >230</TD>
+<TD >230</TD>
+<TD >230</TD>
+<TD >230</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst10</TD>
 <TD >6</TD>
 <TD >0</TD>
